# memory_demo

./: .gitignore  README.md  pyproject.toml
src/: step1.py  step2.py  test_fix.py  test_memory.py
src/memory_demo/: crew.py  main.py
storage/: chroma.sqlite3  ltm_memory.db
