[project]
name = "memory_demo"
version = "0.1.0"
description = "memory_demo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0",
    "langchain-ollama>=0.3.7",
    "langchain-huggingface>=0.1.0",
    "langgraph>=0.6.6",
    "sentence-transformers>=5.1.0",
    "torch>=2.0.0",
    "requests>=2.25.0",
    "langchain-openai>=0.2.14",
]

[project.scripts]
memory_demo = "memory_demo.main:run"
run_crew = "memory_demo.main:run"
train = "memory_demo.main:train"
replay = "memory_demo.main:replay"
test = "memory_demo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
